--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "gatsby": "^2.8.6",
+    "gatsby-source-filesystem": "^2.0.39",
+    "gatsby-transformer-remark": "^2.3.12",
+    "lodash.kebabcase": "^4.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
